[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/enemy/boss/Boss1/Boss1.gd" type="Script" id=1]
[ext_resource path="res://graphics/enemy/boss/boss1/boss1_base.png" type="Texture" id=2]
[ext_resource path="res://scenes/enemy/boss/Boss1/Boss1Center.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/enemy/boss/Boss1/Boss1Gun.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/enemy/boss/Boss1/Boss1Launcher.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/enemy/CanhaoEnemy.tscn" type="PackedScene" id=6]



[node name="Boss1" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Boss1Center" parent="." instance=ExtResource( 3 )]
position = Vector2( 79.4991, -71.1774 )
score = 500

[node name="Boss1Gun" parent="." instance=ExtResource( 4 )]
position = Vector2( 87, 23 )
hp = 50
score = 80

[node name="Boss1Gun2" parent="." instance=ExtResource( 4 )]
position = Vector2( 119, 23 )
hp = 50
score = 80

[node name="Boss1Launcher" parent="." instance=ExtResource( 5 )]
position = Vector2( -42.1933, -88.2095 )
hp = 150
score = 250

[node name="CanhaoEnemy" parent="." instance=ExtResource( 6 )]
position = Vector2( -86, -39 )
hp = 80
score = 100
scrollDown = 0
shootInterval = 1.5

[node name="CanhaoEnemy2" parent="." instance=ExtResource( 6 )]
position = Vector2( -59, -40 )
hp = 80
score = 100
scrollDown = 0
shootInterval = 1.2

[node name="CanhaoEnemy3" parent="." instance=ExtResource( 6 )]
position = Vector2( -33, -40 )
hp = 80
score = 100
scrollDown = 0
shootInterval = 1.5

[node name="CanhaoEnemy4" parent="." instance=ExtResource( 6 )]
position = Vector2( -7, -40 )
hp = 80
score = 100
scrollDown = 0
shootInterval = 1.2

[node name="CanhaoEnemy5" parent="." instance=ExtResource( 6 )]
position = Vector2( 18, -40 )
hp = 80
score = 100
scrollDown = 0
shootInterval = 1.5

[node name="TimerDestroyed" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="timeout" from="TimerDestroyed" to="." method="_on_TimerDestroyed_timeout"]
